fixed errors and instructions

--- a/Reading-data-and-plotting-in-R.ipynb
+++ b/Reading-data-and-plotting-in-R.ipynb
@@ -20,6 +20,11 @@
     "To retrieve the data in your terminal, run the following commands within a **terminal** window\n",
     "```bash\n",
     "wget https://zenodo.org/record/7510587/files/deseq2_5k.csv\n",
+    "```\n",
+    "\n",
+    "Also be sure to install the dependencies\n",
+    "```bash\n",
+    "rscript install_dependencies.R\n",
     "```"
    ]
   },
@@ -81,6 +86,7 @@
     }
    ],
    "source": [
+    "library(rlang)\n",
     "library(data.table)\n",
     "library(EnhancedVolcano)"
    ]
